@@ -45,7 +45,7 @@
 /*
  * CCL - header file
  *
- * $Id: ccl.h,v 1.15 2003-06-24 23:03:04 adam Exp $
+ * $Id: ccl.h,v 1.16 2004-08-18 10:03:01 adam Exp $
  *
  * Old Europagate Log:
  *
@@ -299,8 +299,11 @@ YAZ_EXPORT void ccl_qual_file (CCL_bibset bibset, FILE *inf);
 /* Read CCL qualifier list spec from file inf */
 YAZ_EXPORT int ccl_qual_fname (CCL_bibset bibset, const char *fname);
 
-/* Add CCL qualifier by using single-line spec */
-YAZ_EXPORT void ccl_qual_fitem (CCL_bibset bibset, const char *cp,
+/* Add CCL qualifier as line spec. Note: line is _modified_ */
+YAZ_EXPORT void ccl_qual_line(CCL_bibset bibset, char *line);
+
+/* Add CCL qualifier by using qual_name + value pair */
+YAZ_EXPORT void ccl_qual_fitem (CCL_bibset bibset, const char *value,
                                 const char *qual_name);
 
 /* Make CCL qualifier set */
